--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-PAYLOAD_SECRET=secret
-
-MONGODB_URL=mongodb+srv://ibikunleadekiitan:Engineeradekiitan1@cluster0.kzl1oxw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+PAYLOAD_SECRET=
+MONGODB_URL=
+NEXT_PUBLIC_SERVER_URL=
 
 STRIPE_SECRET_KEY=
 
-RESEND_API_KEY=re_eZaFYWoP_BcFjrPeEEYkSc3YdtdaYEXNg
+RESEND_API_KEY=
